# codingwithsaira

./: Assignment 3.ipynb  Assignment1.ipynb  Assignment4.ipynb  README.md  project.ipynb
todo/kongservices/: Docker-compose.yml
todo/project/: Dockerfile.dev  Dockerfilefront.dev  docker-compose.yml  pyproject.toml  sample.txt
todo/project/project/: crud.py  database.py  main.py  models.py
todo/project/project/frontend/: app.py
