[tool.poetry]
name = "todo-frontend"
version = "0.1.0"
description = "Frontend for ToDo app"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^0.86.0"
requests = "^2.26.0"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
